--- a/task-manager-django/requirements.txt
+++ b/task-manager-django/requirements.txt
@@ -6,8 +6,9 @@ django-crispy-forms==2.0
 django-environ==0.10.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
-psycopg2==2.9.6
 psycopg2-binary==2.9.6
 PyJWT==2.6.0
 pytz==2023.3
 sqlparse==0.4.3
+dj-database-url==1.3.0
+gunicorn==20.1.0
